# ufo-upiv

./: .gitignore  CMakeLists.txt  README.md  example.cfg  piv-hough
plugins/: CMakeLists.txt  ufo-azimuthal-test-task.c  ufo-bilateral-task.c  ufo-blob-test-task.c  ufo-brightness-cut-task.c  ufo-candidate-filter-task.c  ufo-combine-test-task.c  ufo-complex-mult-task.c  ufo-concatenate-result-task.c  ufo-contrast-task.c  ufo-device-info-task.c  ufo-fftconvolution-task.c  ufo-fftconvolution-task.h  ufo-filter-particle-task.c  ufo-get-dup-circ-task.c  ufo-hessian-analysis-task.c  ufo-hessian-kernel-task.c  ufo-hough-likelihood-image-task.c  ufo-hough-likelihood-task.c  ufo-label-cluster-task.c  ufo-local-maxima-task.c  ufo-localmaxima-task.c  ufo-log-task.c  ufo-multi-search-task.c  ufo-of-ring-pattern-task.c  ufo-ordfilt-task.c  ufo-piv-contrast-task.c  ufo-ring-pattern-task.c  ufo-ring-writer-task.c  ufo-sum-task.c
plugins/kernels/: hough.cl
